--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<link rel="stylesheet" href="style.css">
 <header class="main-header">
     <div class="logo">
         <a href="index.html">Aapki Website Naam</a>
