--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Neha — Digital Services</title>
-  <link rel="stylesheet" href="styles.css" />
+  <title>R.S Films Group — Digital Services</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <!-- HEADER -->
@@ -13,7 +13,7 @@
       <div class="brand">
         <div class="logo">N</div>
         <div class="brand-text">
-          <h1>नीहा</h1>
+          <h1>R.S Films Group</h1>
           <p class="tagline">Digital Services — YouTube • Instagram • Music Distribution</p>
         </div>
       </div>
